# kairix

./: .golangci.yml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONSTRAINTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.eval.yml  docker-compose.example.yml  docker-compose.yml  kairix.example.config.yaml  pyproject.toml  sonar-project.properties
.architecture/baseline/: actionable-feedback-files.txt  bdd-no-implementation-leaks-files.txt  cognitive-complexity-files.txt  empty-body-intent-files.txt  env-reads-in-paths-files.txt  f26-files.txt  no-duplicate-string-files.txt  no-env-monkeypatch-files.txt  no-internal-patches-files.txt  no-internal-test-imports-files.txt  no-test-only-kwargs-files.txt  per-file-coverage-floor-files.txt  per-file-coverage-floor-union-files.txt  readme-coverage-files.txt  suppressions-have-rationale-files.txt  unused-params-named-files.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: baseline-audit.yml  benchmark-gate.yml  ci.yml  dependency-review.yml  docker-publish.yml  go-quality.yml  integration.yml  publish-pypi.yml  reflib-benchmark-gate.yml  reflib-history-capture.yml  release-alpha.yml  release-smoke.yml  release-vm-deploy.yml  release-webhook.yml  release.yml  sonar-triage.yml
benchmark-results/: README.md
benchmark-results/history/: INDEX.md  v2026.5.10.1-2026-05-02.json
docker/: entrypoint.sh
docker/vault-agent/: Dockerfile  entrypoint.sh  fetch_secrets.py
docs/: README.md
docs/agents/: ADMIN-CONVERSATION.md  AGENT-SETUP.md
docs/architecture/: ADR-017-deployment-architecture.md  ENGINEERING.md  cli-mcp-feature-parity.md  configurable-default-scope.md  eval-module-refactor.md  fitness-functions.md  go-integration-plan.md  operational-tests-design.md  paths-di-refactor.md  performance-testing-approach.md  probe-config-schema.md  provider-plugin-architecture.md  quality-exceptions-refactor.md  quality-harness-setup-guide.md  retrieval-boost-config-plan.md  sre-worker-design.md  teaming-concurrency-strategy.md
docs/getting-started/: quick-start.md
docs/operations/: MCP-CLIENT-MIGRATION.md  MCP-DEPLOYMENT.md  OPERATIONS.md  SHARED-HOSTS.md
docs/project/: ROADMAP.md
docs/runbooks/: README.md  kairix-retrieval-health.md  kairix-systemd-update.md
docs/upgrades/: v2026.5.3.md
docs/user-guide/: agent-usage-guide.md  entity-overrides.md
kairix/: README.md  __init__.py  _azure.py  bootstrap_cli.py  cli.py  credentials.py  paths.py  secrets.py  text.py  worker.py  worker_cli.py  worker_state.py
kairix/core/: factory.py  health.py  protocols.py
kairix/plugins/: __init__.py
kairix/providers/: __init__.py  _base.py  _errors.py
kairix/transport/: __init__.py  embed_service.py
kairix/use_cases/: __init__.py  _brief_defaults.py  _contradict_defaults.py  _entity_defaults.py  _entity_get_defaults.py  _prep_defaults.py  _research_defaults.py  _search_defaults.py  _timeline_defaults.py  _usage_guide_defaults.py  bootstrap.py  brief.py  contradict.py  entity.py  entity_audit.py  entity_get.py  entity_purge.py  prep.py  research.py  search.py  timeline.py  usage_guide.py
scripts/: README.md  audit-date-formats.py  build-reflib-queries.py  chunk-crm-interactions.py  chunk-daily-files.py  download-additional-sources.sh  extract_changelog_section.py  install-neo4j.sh  migrate-domain-structure.py  pre-commit-confidential-check.sh  preflight.sh  prune-entities.py  release-checklist.md  safe-commit.sh  seed-brief-entities.py  uat-smoke.sh  update_reflib_history.py
scripts/benchmarks/: locomo_spike.py
scripts/checks/: _arch_lib.py  _lib.sh  audit_baselines.py  check-env-reads-stay-in-paths.sh  check-no-env-monkeypatch.sh  check-no-internal-patches.sh  check-suppressions-have-rationale.sh  check-workflow-silencers-have-rationale.sh  check_actionable_feedback.py  check_bdd_happy_path.py  check_bdd_no_implementation_leaks.py  check_capability_affordance.py  check_cognitive_complexity.py  check_empty_body_intent.py  check_go_dependency_rationale.py  check_go_logging_discipline.py  check_go_no_panic_outside_main.py  check_go_readme_coverage.py  check_go_version_flag.py  check_no_commented_out_code.py  check_no_cross_provider.py  check_no_duplicate_string.py  check_no_env_monkeypatch.py  check_no_internal_imports.py  check_no_internal_patches.py  check_no_logging_secrets.py  check_no_test_imports_in_prod.py  check_no_test_only_kwargs.py  check_path_naming.py  check_per_file_coverage.py  check_perf_singleton.py  check_provider_bdd_completeness.py  check_provider_layer_imports.py  check_readme_coverage.py  check_sonar_ignore_rationale.py  check_test_markers.py  check_test_skip_rationale.py  check_unused_params_named.py  check_worktree_isolation.py  merge_coverage_xml.py  (+1 more)
scripts/install/: kairix-docker-prune.service.example  kairix-docker-prune.timer.example  kairix-fetch-secrets.service.example  kairix.service.example  permissions-preflight.sh
scripts/sonar/: triage_hotspots.py
services/: README.md
services/alpha-deploy-webhook/: DEPENDENCIES.md  README.md  go.mod
services/hello/: DEPENDENCIES.md  README.md  go.mod
suites/: README.md  reflib-gold-v3.yaml
tests/: README.md  conftest.py  fakes.py  test_agent_memory_path_regression.py  test_bootstrap_cli.py  test_credentials.py  test_init.py  test_paths.py  test_secrets.py  test_top_level_cli_dispatch.py  test_worker.py  test_worker_cli.py  test_worker_state.py
tests/architecture/: test_actionable_feedback.py  test_capability_affordance.py  test_check_no_internal_patches.py  test_f26_core_import_boundary.py  test_f27_no_cross_provider.py  test_f28_provider_bdd_completeness.py  test_f29_perf_singleton.py  test_no_test_imports_in_prod.py  test_path_naming.py  test_readme_coverage.py
tests/bdd/: test_agent_collections.py  test_benchmark_run.py  test_bootstrap.py  test_brief_cli.py  test_chunk_date_fallback.py  test_classify.py  test_config_layering.py  test_configurable_default_scope.py  test_curator_cli.py  test_curator_health.py  test_e2e_provider_chat.py  test_embed_cli.py  (+71 more)
(+658 files in other folders)
